--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=2f5dbb9f52b7eccd101e0010b464dfe4
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
@@ -29,9 +29,9 @@ APP_SECRET=2f5dbb9f52b7eccd101e0010b464dfe4
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://mindsacademy:Azerty!123&&@127.0.0.1:3306/mindsacademy?serverVersion=5.7"
+ #DATABASE_URL="mysql://mindsacademy:Azerty!123&&@127.0.0.1:3306/mindsacademy?serverVersion=5.7"
 
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/mindsacademy?serverVersion=mariadb-10.4.11"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/mindsacademy?serverVersion=mariadb-10.4.11"
 #DATABASE_URL="mysql://root:&&@127.0.0.1:3306/mindsacademy"
 ###< doctrine/doctrine-bundle ###
 
