--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,5 +34,17 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+          - { path: ^/admin, roles: ROLE_SUPER_ADMIN }
+          - { path: /event/new, roles: ROLE_SUPER_ADMIN }
+          - { path: /matiere/, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /matiere/new, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /etudiant, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /niveau/new/admin, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /niveau/new, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /groupe/, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /groupe/new, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /pdf/, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /pdf/new, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /videos/admin, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /videos/new, roles: [ROLE_ADMIN , ROLE_SUPER_ADMIN] }
+          - { path: /contact/, roles:  ROLE_SUPER_ADMIN }
